--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
 	<head>
+	<link rel="stylesheet" type="text/css" href="./css/main.css">
 	</head>
 	<body>
+	<script src="script.js"></script>
 	</body>
 </html>
