added about page and header to index

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html ng-app="currentsee">
         <head>
-            <title>The Kitten's Story</title>
+            <title>CURRENTsee</title>
 
 
         </head>
                 <body>
+                	<h1> CURRENTsee</h1>
+
                     <nav>
                             <a href="#/form" class = "nav">Create</a>
                             <span> l </span>
                             <a href="#/result" class = "nav">Results</a>
+                            <a hre="#/about" class= "nav">Results</a>
                     </nav>
                             <div ng-view="">Loading...</div>
 
