modified html and css

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html ng-app="currentsee">
         <head>
             <title>The Kitten's Story</title>
+            <link rel="stylesheet" type="text/css" src="css/master.css">
 
 
         </head>
@@ -19,8 +20,7 @@
                     <script src="controller1.js"></script>
                     <script src="controller2.js"></script>
                     <script src="factory.js"></script>
-                    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-                    <link rel="stylesheet" type="text/css" href="button.css">
+                   
 
 
                 </body>
