fixed some misspellings

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
                             <a href="#/form" class = "nav">Create</a>
                             <span> l </span>
                             <a href="#/result" class = "nav">Results</a>
-                            <a hre="#/about" class= "nav">Results</a>
+                            <a href="#/about" class= "nav">About</a>
                     </nav>
                             <div ng-view="">Loading...</div>
 
