--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,23 @@
 
         </head>
                 <body>
+                	<!--header and footer will remain static outside the views. this is a temp header. to be replaced by logo image. will link to form view-->
+                	<h1><a href="#/form">CURRENTsee</a></h1>
 
 
                     <nav>
-                            <a href="#/form" class = "nav">Create</a>
+                            <a href="#/form" class = "nav">Search</a>
                             <span> l </span>
                             <a href="#/result" class = "nav">Results</a>
                             <a href="#/about" class= "nav">About</a>
                     </nav>
                             <div ng-view="">Loading...</div>
+
+                            <!--the footer will contain created by info, powered by api's info, the logo's for the apis, and a link to our about page-->
+                            <footer>
+                            <ul>
+                            </ul>
+                            </footer>
 
                     <script src="lib/angular.min.js"></script>
                     <script src="lib/angular-route.min.js"></script>
