got rid of all the mad libs stuff started structuring everything in the views, did some preliminary sass mock up stuff, very much in progress

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                             <a href="#/result" class = "nav">Results</a>
                             <a href="#/about" class= "nav">About</a>
                     </nav>
-                            <div ng-view="">Loading...</div>
+                            <div id="view" ng-view="">Loading...</div>
 
                             <!--the footer will contain created by info, powered by api's info, the logo's for the apis, and a link to our about page-->
                             <footer>
