messing around with html and css

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
 
 
             <title>CURRENTsee</title>
+            <link rel="stylesheet" type="text/css" href="css/master.css">
+            <link href="https://fonts.googleapis.com/css?family=Bungee|Gravitas+One|Russo+One|Titan+One" rel="stylesheet">
 
 
 
@@ -13,7 +15,7 @@
         </head>
                 <body>
                 	<!--header and footer will remain static outside the views. this is a temp header. to be replaced by logo image. will link to form view-->
-                	<h1><a href="#/form">CURRENTsee</a></h1>
+                	<a href="#/form"><h1><span>CURRENT</span>see</h1></a>
 
 
                     <nav>
@@ -36,8 +38,7 @@
                     <script src="controller1.js"></script>
                     <script src="controller2.js"></script>
                     <script src="factory.js"></script>
-                    <link rel="stylesheet" type="text/css" href="css/master.css">
-
+                    
 
 
                 </body>
