changed some css, added new color scheme, minor html changes

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
         <head>
 
 
-            <title>CURRENTsee</title>
+            <title>currentSEE</title>
             <link rel="stylesheet" type="text/css" href="css/master.css">
             <link href="https://fonts.googleapis.com/css?family=Bungee|Gravitas+One|Russo+One|Titan+One" rel="stylesheet">
 
@@ -15,7 +15,7 @@
         </head>
                 <body>
                 	<!--header and footer will remain static outside the views. this is a temp header. to be replaced by logo image. will link to form view-->
-                	<a href="#/form"><h1><span>CURRENT</span>see</h1></a>
+                	<a href="#/form"><h1><span>current</span>SEE</h1></a>
 
 
                     <nav>
