--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
                     <script src="lib/angular-route.min.js"></script>
                     <script src="js/app.js"></script>
                     <script src="js/factory.js"></script>
-                    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTKPL7rYEGDsf6NT_AFO8991Gb9QY3C-Y&libraries=places"></script>
+                  <!--  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTKPL7rYEGDsf6NT_AFO8991Gb9QY3C-Y&libraries=places"></script> -->
 
 
 
