--- a/public/index.html
+++ b/public/index.html
@@ -32,11 +32,13 @@
                     </ul>
 
 
+                    <script src="lib/jquery-1.11.1.js"></script>
                     <script src="lib/angular.min.js"></script>
                     <script src="lib/angular-route.min.js"></script>
                     <script src="js/app.js"></script>
                     <script src="js/factory.js"></script>
-                  
+
+
 
 
 
