--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
                         <li id="creators">Created by: Jazib, Neal, and Katie</li>
                         <li class="navlinks" id="google"><a href="#"></a><img src="/images/google.png"></li>
                         <li class="navlinks" id="twitter"><a href="#"></a><img src="/images/twitter.png"></li>
-                        <li class="navlinks" id="powered">powered by</li>
+                        <li class="navlinks" id="powered">Powered By</li>
                         <li class="navlinks" id="about"><a href="#/about">About</a></li>
 
                     </ul>
