--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
 
 
-
+                  <!--    style="overflow: scroll;" -->
 
                             <div id="view" ng-view=" ">Loading...</div>
 
