--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
                             <!--the footer will contain created by info, powered by api's info, the logo's for the apis, and a link to our about page-->
 
                     <ul id="footer">
-                        
-                        <li class="navlinks" id="google"><a href="#"></a><img src="/images/google.png"></li>
-                        <li class="navlinks" id="twitter"><a href="#"></a><img src="/images/twitter.png"></li>
+
+                        <li class="navlinks" id="google"><a href="https://www.google.com/"><img src="/images/google.png"></a></li>
+                        <li class="navlinks" id="twitter"><a href="https://twitter.com/"><img src="/images/twitter.png"></a></li>
                         <li class="navlinks" id="powered">Powered By</li>
                         <li class="navlinks" id="about"><a href="#/about">About</a></li>
 
