--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         </head>
                 <body>
                 	<!--header and footer will remain static outside the views. this is a temp header. to be replaced by logo image. will link to form view-->
-                	<a href="#/form"><h1><span>current</span>SEE<img src="/images/currentsee.png"></h1></a>
+                	<a href="#/form"><h1><span>current</span><span id="see">SEE</span><img src="/images/currentsee.png"></h1></a>
 
 
 
@@ -27,7 +27,7 @@
                         <li class="navlinks" id="google"><a href="https://www.google.com/"><img src="/images/google.png"></a></li>
                         <li class="navlinks" id="twitter"><a href="https://twitter.com/"><img src="/images/twitter.png"></a></li>
                         <li class="navlinks" id="powered">Powered By</li>
-                        <li class="navlinks" id="about"><a href="#/about">About</a></li>
+                        <li class="navlinks" id="about"><a href="#/about"><span id="about-text">About</span></a></li>
 
                     </ul>
 
